--- a/css/principal.css
+++ b/css/principal.css
@@ -6,23 +6,6 @@ body {
     background: #FFF;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1.5rem;
-}
-.item{
-    padding-top: 1rem;
-}
-
-#logo{
-    width: 7rem;
-    height: 7rem;
-    flex-shrink: 0;
-    fill: #D2CFCF;
-}
-
 input{
     border-radius: 0.5rem !important;
     background: #EFF0EB !important;
@@ -37,9 +20,40 @@ input::placeholder {
     /* line-height: normal !important; */
 }
 
-#button-login{
-    margin-top: 0.5rem;
-    width: 18.2rem;
+h1{
+    color: #8941FF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+h2{    
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.isConnected{
+    color:#26FF2F
+}
+.isOffline{
+    color:#ff2626
+}
+
+.container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem;
+}
+.item{
+    padding-top: 1rem;
 }
 
 .button.is-info.is-light {
@@ -53,6 +67,22 @@ input::placeholder {
 .button.is-info.is-light:hover {
     background-color: #8941ff;
     color: #E6D7FF;
+}
+
+#button-login{
+    margin-top: 0.5rem;
+    width: calc(100vw - 3rem);
+}
+
+#logo{
+    width: 7rem;
+    height: 7rem;
+    flex-shrink: 0;
+    fill: #D2CFCF;
+}
+
+#painelForm{
+    display: none;
 }
 
 
