--- a/css/principal.css
+++ b/css/principal.css
@@ -1,11 +1,3 @@
-body {
-    width: 25rem;
-    height: 25rem;
-    flex-shrink: 0;
-    border-radius: 0.9375rem;
-    background: #FFF;
-}
-
 input{
     border-radius: 0.5rem !important;
     background: #EFF0EB !important;
@@ -21,7 +13,7 @@ input::placeholder {
 }
 
 h1{
-    color: #8941FF;
+    color: #8941FF !important;
     font-family: Inter;
     font-size: 24px;
     font-style: normal;
@@ -44,18 +36,6 @@ h2{
     color:#ff2626
 }
 
-.container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1.5rem;
-}
-.item{
-    padding-top: 1rem;
-}
-
 .button.is-info.is-light {
     font-family: Ubuntu !important;
     font-weight: 600 !important;
@@ -69,20 +49,17 @@ h2{
     color: #E6D7FF;
 }
 
-#button-login{
-    margin-top: 0.5rem;
-    width: calc(100vw - 3rem);
+.box{
+    border-radius: 22px;
+    background-color: #FAF8F8;
+}
+
+.footer{
+    padding-top: calc(100vh - (100vh - 4rem));
 }
 
 #logo{
     width: 7rem;
-    height: 7rem;
     flex-shrink: 0;
     fill: #D2CFCF;
 }
-
-#painelForm{
-    display: none;
-}
-
-
