--- a/src/pages/popup/popup.css
+++ b/src/pages/popup/popup.css
@@ -1,6 +1,6 @@
 body {
     width: 25rem;
-    height: 25rem;
+    height: 26rem;
     flex-shrink: 0;
     border-radius: 0.9375rem;
     background: #FFF;
@@ -20,7 +20,7 @@ body {
 
 #button-login{
     margin-top: 0.5rem;
-    width: calc(100vw - 3rem);
+    width: calc(100vw - 6.7rem);
 }
 
 #logo{
@@ -30,3 +30,13 @@ body {
 #painelForm{
     display: none;
 }
+
+#errorDiv{
+    width: calc(100vw - 6.7rem);
+}
+
+.message-body{
+    padding: 0.5em 0.5em !important;
+}
+
+
