--- a/src/pages/popup/popup.css
+++ b/src/pages/popup/popup.css
@@ -1,9 +1,9 @@
 body {
     width: 25rem;
-    height: 26rem;
+    height: var(--height) !important;
     flex-shrink: 0;
-    border-radius: 0.9375rem;
     background: #FFF;
+    overflow: hidden;
 }
 
 .container {
@@ -18,6 +18,43 @@ body {
     padding-top: 1rem;
 }
 
+.control .has-icon :focus  {
+    color: #8941FF !important;
+}
+
+.form-card {
+    margin-top: 10rem;
+}
+
+.auth-wrapper-inner .single-form-wrap {
+    min-height: 100vh !important;
+}
+
+.button .icon:last-child:not(:first-child) {
+    margin-bottom: 3px !important;
+}
+
+.button.is-primary {
+    background-color: #8941FF !important;
+    border-color: transparent !important;
+    color: #f9f9f9 !important;
+}
+
+body.is-dark .button.is-primary {
+    border-color: transparent !important;
+    background: #8941FF !important;
+    color: #E6D7FF !important;
+    overflow-y: hidden !important;
+}
+
+.form-switch.is-primary input:checked+i {
+    background-color: #8941FF !important;
+}
+
+body.is-dark .form-switch.is-primary input:checked+i {
+    background-color: #8941FF !important;
+}
+
 #button-login{
     margin-top: 0.5rem;
     width: calc(100vw - 6.7rem);
@@ -25,6 +62,7 @@ body {
 
 #logo{
     height: 7rem;
+    margin-top: 10rem;
 }
 
 #painelForm{
