--- a/src/templates/pages/painel/painel.html
+++ b/src/templates/pages/painel/painel.html
@@ -13,7 +13,7 @@
                     <h3>Conexão</h3>
                     <p>Agora você precisar gerar o QR CODE e lê-lo para conectar o Whatspp do seu negócio</p>
                     <div id="button-session" class="button-wrap">
-                        <a class="button h-button is-primary is-elevated">CONECTAR</a>
+                        <a id="button-session-link" class="button h-button is-primary is-elevated">CONECTAR</a>
                     </div>
                 </div>
             </div>
