--- a/src/templates/pages/painel/painel.css
+++ b/src/templates/pages/painel/painel.css
@@ -1,10 +1,10 @@
-.view-wrapper{
-    min-height: 0 !important;
-    padding-top: 18px !important;
+.page-content-inner {
+    min-height: 10vh !important;
+    margin-bottom: 16rem !important;
+    margin-top: 5rem !important;
 }
 
-.page-content-inner {
-    min-height: 70vh !important;
-    margin-bottom: 8rem !important;
-    margin-top: 20px !important;
+body.is-dark .button.is-primary {
+    border-color: #671cc9 !important;
+    background: #671cc9 !important;
 }
