feat: ajuste para gerar o qrcode corretamente e conectar a sessao e add toasts de tratamento de messages e logs do usuario

--- a/src/templates/app/app.html
+++ b/src/templates/app/app.html
@@ -13,6 +13,7 @@
     <!--Core CSS -->
     <link rel="stylesheet" href="../assets/css/app.css">
     <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/vendor/css/notyf.min.css">
     <link rel="stylesheet" href="app.css">
 
     <!-- Fonts -->
@@ -183,8 +184,8 @@
     <footer id="footer">
         <div class="content has-text-centered">
             <p>&copy; 2023 Notifyer Extension. Todos os direitos reservados. Desenvolvido por <a
-                    href="https://github.com/paulosmdo" target="_blank">paulosmdo</a> e <a
-                    href="https://github.com/sucodefrutas" target="_blank">sucodefrutas</a>.</p>
+                    href="https://github.com/paulosmdo" target="_blank">Paulo Sérgio</a> e <a
+                    href="https://github.com/patricioliveira" target="_blank">Patrício Oliveira</a>.</p>
         </div>
     </footer>
     
@@ -203,6 +204,7 @@
     
     <!-- Additional Features -->
     <script src="../assets/js/touch.js" async></script>
+    <script type="module" src="../assets/vendor/js/notyf.min.js" async></script>
 
     <!-- Huro js -->
     <script src="../assets/js/functions.js" async></script>
