--- a/src/templates/pages/auth/auth.html
+++ b/src/templates/pages/auth/auth.html
@@ -76,8 +76,8 @@
             <footer id="footer">
                 <div class="content has-text-centered">
                     <p>&copy; 2023 Notifyer Extension. Todos os direitos reservados. Desenvolvido por <a
-                            href="https://github.com/paulosmdo" target="_blank">paulosmdo</a> e <a
-                            href="https://github.com/sucodefrutas" target="_blank">sucodefrutas</a>.</p>
+                            href="https://github.com/paulosmdo" target="_blank">Paulo Sérgio</a> e <a
+                            href="https://github.com/patricioliveira" target="_blank">Patrício Oliveira</a>.</p>
                 </div>
             </footer>
         </div>
