--- a/src/templates/pages/painel/painel.html
+++ b/src/templates/pages/painel/painel.html
@@ -11,9 +11,9 @@
                 <div class="onboarding-card">
                     <img id="qrcode-image">
                     <h3>Conexão</h3>
-                    <p>Agora você precisar gerar o QR CODE e lê-lo para conectar o Whatspp do seu negócio</p>
+                    <p>Agora você precisar gerar o QR CODE e lê-lo para conectar o Whatsapp do seu negócio</p>
                     <div id="button-session" class="button-wrap">
-                        <a id="button-session-link" class="button h-button is-primary is-elevated">CONECTAR</a>
+                        <a id="button-session-link" class="button h-button is-primary is-elevated">GERAR QRCODE</a>
                     </div>
                 </div>
             </div>
