feat: ajustes nas menesagens toast para deixar mais claros os erros para o usuario

--- a/src/templates/pages/painel/painel.html
+++ b/src/templates/pages/painel/painel.html
@@ -1,4 +1,4 @@
-<div class="page-content-inner">
+<div class="page-content-inner" id="painel-page">
     <!--Onboarding-->
     <div class="standard-onboarding">
         <div class="title-wrap">
