feat: agora o titulo da pagina (nome do negocio) vai ser dinamico de acordo com o login

--- a/src/templates/app/app.html
+++ b/src/templates/app/app.html
@@ -173,7 +173,7 @@
         </div>
         
         <!-- Content Wrapper -->
-        <div id="app-onboarding" class="view-wrapper is-webapp" data-page-title="Ceará Lanches">
+        <div id="app-onboarding" class="view-wrapper is-webapp" data-page-title="">
         </div>
 
     </div>
