--- a/src/templates/popup/popup.html
+++ b/src/templates/popup/popup.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/app.css">
     <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../../../css/bulma.min.css">
-    <link rel="stylesheet" href="../../../css/all.min.css">
-    <link rel="stylesheet" href="../../../css/principal.css">
+    <link rel="stylesheet" href="../../templates/assets/css/bulma.min.css">
+    <link rel="stylesheet" href="../../templates/assets/css/all.min.css">
+    <link rel="stylesheet" href="../../templates/assets/css/principal.css">
     <link rel="stylesheet" href="popup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;500;600&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -110,7 +110,7 @@
     </form>
 
     <script type="module" src="popup.js"></script>
-    <script src="../../../libs/all.min.js"></script>
+    <script src="../assets/vendor/js/all.min.js"></script>
     <!--Huro Scripts-->
     <!-- Concatenated plugins -->
     <script src="../assets/js/app.js"></script>
